--- a/app/views/reserves/show.mobile.erb
+++ b/app/views/reserves/show.mobile.erb
@@ -1,4 +1,6 @@
-<h1 class="title"><%= t('page.showing', :model => t('activerecord.models.reserve')) -%></h1>
+<div data-role="header">
+  <h1 class="title"><%= t('page.showing', :model => t('activerecord.models.reserve')) -%></h1>
+</div>
 <p id="notice"><%= notice %></p>
 
 <%= render 'manifestations/title', :manifestation => @reserve.manifestation -%>
