--- a/app/views/reserves/_new_user.mobile.erb
+++ b/app/views/reserves/_new_user.mobile.erb
@@ -1,9 +1,3 @@
-<script>
-$(function(){
-  $('#reserve_expired_at').setCalendar({src:'/assets/calendar.png'});
-});
-</script>
-
 <div data-role="header">
   <a href="javascript:history.back()" data-icon="back" data-iconpos="notext" class="ui-btn-left"><%= t('page.back') %></a>
   <h1 class="title"><%= t('page.new', :model => t('activerecord.models.reserve')) -%></h1>
@@ -13,41 +7,36 @@ $(function(){
 
 <%= form_for(@reserve, :url => user_reserves_path(@user)) do |f| -%>
   <%= f.error_messages -%>
-  <div class="field">
+  <div class="input_field">
     <%= render 'manifestations/title', :manifestation => @reserve.manifestation -%>
     <%= f.hidden_field :manifestation_id -%>
   </div>
   
-  <div class="field">
+  <div class="input_field">
     <%#= render 'manifestations/show_series_number', :manifestation => @reserve.manifestation -%>
   </div>
 
-  <div class="field">
+  <div class="input_field">
     <%= f.label t('activerecord.models.user') -%>
     <%= link_to @reserve.user.username, @reserve.user -%>
     (<%= @reserve.user.user_number %>)
   </div>
-  <br />
-  <div class="field">
+  
+  <div class="input_field">
     <%= f.label t('activerecord.attributes.reserve.information_type') -%>
     <%= f.select(:information_type_id, @informations.collect{|i| [i.display_name + " " + i.information, i.id]}) -%>
   </div>
-  <br />
-  <div class="field">
+  
+  <div class="input_field">
     <%= f.label t('activerecord.attributes.reserve.receipt_library') -%>
     <%= f.select(:receipt_library_id, @libraries.collect{|l| [l.display_name.localize, l.id]}) -%>
   </div>
-  <br />
-  <div class="field">
-<script>
-    if (typeof $('#expired_at').setCalendar == "function") {
-      $('#expired_at').setCalendar({src:'/assets/calendar.png'});
-    }
-</script>
+  
+  <div class="input_field">
     <%= f.label :expired_at -%>
-    <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12" -%>
+    <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12", :type => "date" -%>
   </div>
-  <div class="field">
+  <div class="input_field">
     <%= f.hidden_field :user_number, :value => @user.user_number -%>
     <%= f.submit t('reserve.add'), :disable_with => t('page.wait') -%>
   </div>
