--- a/app/views/reserves/edit.mobile.erb
+++ b/app/views/reserves/edit.mobile.erb
@@ -1,70 +1,58 @@
-<div id="content_detail" class="ui-corner-all">
-<h1 class="title"><%= t('page.editing', :model => t('activerecord.models.reserve')) -%></h1>
-<div id="content_list">
+<div data-role="header">
+  <h1 class="title"><%= t('page.editing', :model => t('activerecord.models.reserve')) -%></h1>
+</div>
+<p id="notice"><%= notice %></p>
 
-<script>
-$(function(){
-  $('#reserve_expired_at').setCalendar({src:'/assets/calendar.png'});
-});
-</script>
+    <li><%= link_to t('page.show'), user_reserve_path(@reserve.user, @reserve) -%></li>
+    <li><%= link_to t('page.back'), user_reserves_path(@reserve.user) -%></li>
 
 <%= form_for(@reserve, :url => user_reserve_path(@reserve.user, @reserve)) do |f| -%>
   <%= f.error_messages -%>
 
-  <div class="field">
+  <div class="input_field">
     <%- if @reserve.manifestation -%>
       <%= render 'manifestations/title', :manifestation => @reserve.manifestation -%>
       <%= f.hidden_field :manifestation_id -%>
     <%- else -%>
-      <%= f.label t('activerecord.models.manifestation') -%><br />
+      <%= f.label t('activerecord.models.manifestation') -%>
       <%= f.text_field :manifestation_id -%>
     <%- end -%>
   </div>
 
-  <div class="field">
+  <div class="input_field">
     <%= f.label t('activerecord.models.user') -%>
     <%= link_to @reserve.user.username, @reserve.user -%>
     (<%= @reserve.user.user_number %>)
   </div>
-  <div class="field">
-    <%= f.label t('activerecord.attributes.reserve.information_type') -%><br />
+  <div class="input_field">
+    <%= f.label t('activerecord.attributes.reserve.information_type') -%>
     <%- if @reserve.retained -%>
       <%= f.select(:information_type_id, @informations.collect{|i| [i.display_name + " " + i.information, i.id]}, {}, :disabled => 'disabled') -%>
     <%- else -%>
       <%= f.select(:information_type_id, @informations.collect{|i| [i.display_name + " " + i.information, i.id]}) -%>
     <%- end -%>
   </div>
-  <div class="field">
-    <%= f.label t('activerecord.attributes.reserve.receipt_library') -%><br />
+  <div class="input_field">
+    <%= f.label t('activerecord.attributes.reserve.receipt_library') -%>
     <%- unless @reserve.state == 'requested'-%>
       <%= f.select(:receipt_library_id, @libraries.collect{|l| [l.display_name.localize, l.id]}, {}, :disabled => 'disabled') -%>
     <%- else-%>
       <%= f.select(:receipt_library_id, @libraries.collect{|l| [l.display_name.localize, l.id]}) -%>
     <%- end -%>
   </div>
-  <div class="field">
-    <%= f.label :expired_at -%><br />
+  <div class="input_field">
+    <%= f.label :expired_at -%>
     <%- unless @reserve.state == 'requested'-%>
-      <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12", :disabled => true-%>
+      <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12", :type => "date", :disabled => true -%>
     <%- else -%>
-      <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12"-%>
+      <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12", :type => "date" -%>
     <%- end -%>
   </div>
-  <div class="field">
-    <%= f.label :item_identifier -%><br />
+  <div class="input_field">
+    <%= f.label :item_identifier -%>
     <%= f.text_field :item_identifier -%>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <%- end -%>
-
-</div>
-</div>
-
-<div id="submenu" class="ui-corner-all">
-  <ul>
-    <li><%= link_to t('page.show'), user_reserve_path(@reserve.user, @reserve) -%></li>
-    <li><%= link_to t('page.back'), user_reserves_path(@reserve.user) -%></li>
-  </ul>
-</div>
