スマホ版：貸出の詳細画面に延長するボタン追加

--- a/app/views/checkouts/show.mobile.erb
+++ b/app/views/checkouts/show.mobile.erb
@@ -26,3 +26,9 @@
     <strong><%= t('activerecord.attributes.checkout.checked_at') -%></strong><br />
     <%= l(@checkout.checked_at, :format => :only_date) if @checkout.checked_at -%>
   </p>
+
+  <%- if @checkout.checkin_id.blank? && (can? :update, @checkout) && @checkout.checkout_renewable?(current_user) -%>
+    <%- unless @checkout.user.in_penalty -%>
+      <%= link_to t('checkout.extend'), user_checkout_path(@checkout.user, @checkout), :method => :put -%>
+    <%- end -%>
+  <%- end -%>
