--- a/app/views/checkouts/_list.html.erb
+++ b/app/views/checkouts/_list.html.erb
@@ -43,7 +43,11 @@
       <%- if SystemConfiguration.get('item.use_different_identifier') %>
         <%= t('activerecord.attributes.item.identifier') %>: <%= link_to checkout.item.identifier, checkout.item %> /
       <%- end -%>
-      <%= t('activerecord.attributes.item.item_identifier') -%>: <%= link_to checkout.item.item_identifier, item_path(checkout.item) -%>
+      <%- if checkout.item.item_identifier %>
+        <%= t('activerecord.attributes.item.item_identifier') -%>: <%= link_to checkout.item.item_identifier, item_path(checkout.item) -%>
+      <%- else -%>
+        <%= link_to t('item.no_number'), checkout.item %>
+      <%- end -%>
     </td>
     <td><%= checkout.item.location_category.keyname if checkout.item.location_category -%></td>
     <td><nobr><%= l(checkout.due_date, :format => :only_date) -%></nobr>
