--- a/app/views/reserves/index.mobile.erb
+++ b/app/views/reserves/index.mobile.erb
@@ -21,7 +21,7 @@
         <%= t('activerecord.attributes.reserve.created_at') -%>:
         <%= l(reserve.created_at, :format => :only_date) -%>
         <br />
-        <%= t('activerecord.attributes.reserve.expired_at') -%>:
+        <%= t('activerecord.attributes.reserve.expired_at2') -%>:
         <%= l(reserve.expired_at, :format => :only_date) -%>
       <%- end -%>
     </li>
