--- a/app/views/checkouts/_list.html.erb
+++ b/app/views/checkouts/_list.html.erb
@@ -55,6 +55,8 @@
         <br /><%= t('checkout.returned') %>
         <br /><nobr><%= l(checkout.checkin.checked_at) %></nobr>
         <br />(<%= t('checkin.checkin_executor') -%>: <%= link_to checkout.checkin.librarian.username, checkout.checkin.librarian -%>)
+      <%- else -%>
+        <br /><%= link_to t('activerecord.models.checkin'), checkins_path(:item_id => checkout.item.id), :method => :post, :confirm =>  t('page.are_you_sure') %>
       <%- end -%>
     </td>
     <td><%= checkout.checkout_renewal_count -%></td>
